--- a/.travis.yml
+++ b/.travis.yml
@@ -11,20 +11,17 @@ php:
   - 5.4
 
 install:
-  # Copy the script into a stable location.
-  - cp scripts/travis-ci.sh $HOME/
-
   # Start by doing system installation.
-  - $HOME/travis-ci.sh system-install
+  - scripts/travis-ci.sh system-install
 
 before_script:
-  - $HOME/travis-ci.sh before-tests
+  - scripts/travis-ci.sh before-tests
 
 script:
-  - $HOME/travis-ci.sh run-tests
+  - scripts/travis-ci.sh run-tests
 
 after_script:
-  - $HOME/travis-ci.sh after-tests
+  - scripts/travis-ci.sh after-tests
 
 notifications:
   email:
