Update travis config for 7.x-1.x

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@
 sudo: false
 
 branches:
-  # Update to 7.x-1.x to only test 7.x-1.x branch when ready
-  only: ci
+  # Only test the 7.x-1.x branch
+  only: 7.x-1.x
 
 language: php
 
