--- a/tests/behat.travis.yml
+++ b/tests/behat.travis.yml
@@ -4,5 +4,5 @@ imports:
 # behat.yml
 default:
   extensions:
-    Behat\MinkExtension\Extension:
+    Behat\MinkExtension:
       base_url: 'http://127.0.0.1:8888'
