--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -12,8 +12,9 @@ default:
     Behat\MinkExtension:
       goutte: ~
       selenium2: ~
-      base_url: http://example.com/
+      base_url: http://redhen_raiser.dev
     Drupal\DrupalExtension:
       blackbox: ~
-
-
+      drush:
+        root: '/users/nancyrackleff/sites/redhen_raiser'
+      api_driver: 'drupal'
