--- a/tests/behat.common.yml
+++ b/tests/behat.common.yml
@@ -1,5 +1,7 @@
 # behat.yml
 default:
+  paths:
+    features: 'features'
   suites:
     default:
       contexts:
@@ -13,7 +15,9 @@ default:
       goutte: ~
       selenium2: ~
       base_url: http://example.com/
-    Drupal\DrupalExtension:
+    Drupal\DrupalExtension\Extension:
       blackbox: ~
-
+      api_driver: 'drupal'
+      drupal:
+        drupal_root: '/users/toto/sites/redhen'
 
